--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td>答え</td>
-                    <td><input class="test1-1" type ="text"></td>
+                    <td><input class="test1-1 test-right" type ="text"></td>
                     <td><input class="test1-1" type ="text"></td>
                     <td><input class="test1-1" type ="text"></td>
                     <td><input class="test1-1" type ="text"></td>
@@ -819,11 +819,13 @@
         <div class="score-content">
             <div class="score">
                 <div class="answer-score_text">言語知識：</div>
-                <div class="test-score_result"></div>
+                <div class="test-score_result"></div>/
+                <div class="answer-score_test1"></div>
             </div>
             <div class="score">
                 <div class="test2-score_text">聴解：</div>
-                <div class="test2-score_result"></div>
+                <div class="test2-score_result"></div>/
+                <div class="answer-score_test2"></div>
             </div>
         </div>
 
