--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td>答え</td>
-                    <td><input class="test1-1 test-right" type ="text"></td>
+                    <td><input class="test1-1" type ="text"></td>
                     <td><input class="test1-1" type ="text"></td>
                     <td><input class="test1-1" type ="text"></td>
                     <td><input class="test1-1" type ="text"></td>
